<resources>
    <string name="app_name">Assist</string>

    <string name="calendar">Calendar</string>
    <string name="contacts">Contacts</string>
    <string name="templates">Templates</string>
    <string name="groups">Groups</string>
    <string name="checklists">Checklists</string>

    <string name="checklist">Checklist</string>
    <string name="delete_event">Delete Event</string>

    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="template">Template</string>
    <string name="notif_time">Notification Time</string>

    <string-array name="sample_groups">
        <item>Grade 5 - Service</item>
        <item>Grade 6 - Courtesy</item>
    </string-array>
</resources>